--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#Mail Connection
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=testmail8293@gmail.com
+spring.mail.password=ghcu rety jzia ybzu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
