--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Twilio Connection Details
-twilio.AccountSid = ACd102553cc05179f82ae14128339e1486
-twilio.AuthToken = 04a72c8858c5f2cddfd1f7a292c466de
+twilio.AccountSid = 
+twilio.AuthToken = 
 twilio.PhoneNumber = +13135137250
