added the application.properties file in gitignore to not push the secrete details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Twilio Connection Details
-twilio.AccountSid = 
-twilio.AuthToken = 
+twilio.AccountSid = ACd102553cc05179f82ae14128339e1486
+twilio.AuthToken = 55154be11851cda2a0f2a4d06388cf6b
 twilio.PhoneNumber = +13135137250
