--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 twilio.AccountSid = 
 twilio.AuthToken = 
 twilio.PhoneNumber = +13135137250
+
+#check gitignore
