added all the twilio config details to an interface

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #Twilio Connection Details
 twilio.AccountSid = 
 twilio.AuthToken = 
-twilio.PhoneNumber = +13135137250
-
-#check gitignore4
-hello=12334567
+twilio.PhoneNumber = 
